fix(ga): css fix in home icon small screen

--- a/packages/webapp/src/webview/ui/components/Header/Header.scss
+++ b/packages/webapp/src/webview/ui/components/Header/Header.scss
@@ -266,8 +266,8 @@
         }
     }
     .home-icon {
-        width: 28px;
-        padding: 0 3px 2px 3px;
+        width: 40px;
+        padding-bottom: 3px;
         border-radius: 3px;
         color: var(--vscode-menu-foreground, #cccccc);
     }
